// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium"
  >
    <label
      class="aje-label"
      for="CustomDropdown-4355539176316202"
      id="CustomDropdown-7895530930895169"
    >
      Custom dropdown label
    </label>
    <div
      class="aje-combobox"
    >
      <div
        aria-controls="CustomDropdown-6752519095198874"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomDropdown-7895530930895169"
        class="aje-combobox__input"
        id="CustomDropdown-4355539176316202"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <ul
        aria-labelledby="CustomDropdown-7895530930895169"
        class="aje-combobox__menu"
        id="CustomDropdown-6752519095198874"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="aje-combobox__option is-focused"
          role="option"
        >
          Option 1
        </li>
        <li
          aria-selected="false"
          class="aje-combobox__option"
          role="option"
        >
          Option 2
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium"
  >
    <div
      class="aje-combobox"
    >
      <div
        aria-controls="CustomDropdown-6752519095198874"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomDropdown-7895530930895169"
        class="aje-combobox__input"
        id="CustomDropdown-4355539176316202"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <ul
        aria-labelledby="CustomDropdown-7895530930895169"
        class="aje-combobox__menu"
        id="CustomDropdown-6752519095198874"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="aje-combobox__option is-focused"
          role="option"
        >
          Option 1
        </li>
        <li
          aria-selected="false"
          class="aje-combobox__option"
          role="option"
        >
          Option 2
        </li>
      </ul>
      <label
        class="aje-label"
        for="CustomDropdown-4355539176316202"
        id="CustomDropdown-7895530930895169"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
